--- a/src/index.css
+++ b/src/index.css
@@ -76,3 +76,24 @@ body {
 .slide-up {
   animation: slide-up 0.3s ease-out forwards;
 }
+
+input:-webkit-autofill,
+textarea:-webkit-autofill,
+select:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 1000px transparent inset !important;
+  -webkit-text-fill-color: inherit !important;
+  transition: background-color 9999s ease-out, color 9999s ease-out;
+}
+
+::-webkit-scrollbar {
+  width: 4px;
+  height: 4px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: #0660b8;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background: #0660b8;
+}
