--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ body {
   left: 0;
   height: 1px;
   width: 100%;
-  background-color: #0660b8;
+  background-color: #ccc3bc;
   transform: scaleX(0);
   transform-origin: left;
   transition: transform 0.3s ease-in-out;
